--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignUpActivity">
+    tools:context=".SignUpActivity"
+    android:background="@drawable/loginbg"
+    >
 
     <EditText
         android:id="@+id/editTextPersonName"
@@ -13,7 +15,7 @@
         android:layout_height="120dp"
         android:layout_marginLeft="50dp"
         android:inputType="textPersonName"
-        android:text="First Name"
+        android:hint="First Name"
         android:layout_marginTop="100dp"
         />
 
@@ -22,8 +24,9 @@
         android:layout_width="300dp"
         android:layout_height="120dp"
         android:inputType="textEmailAddress"
-       android:layout_marginLeft="50dp"
-        android:text="Email" />
+        android:layout_marginLeft="50dp"
+        android:hint="Email"
+        />
 
     <EditText
         android:layout_marginLeft="50dp"
@@ -31,7 +34,7 @@
         android:layout_width="300dp"
         android:layout_height="120dp"
         android:inputType="textPassword"
-
+        android:hint="Password"
 
 
         />
@@ -41,9 +44,9 @@
         android:layout_width="350dp"
         android:layout_height="61dp"
         android:layout_gravity="center"
-        android:onClick="submit"
-        android:text="SUBMIT"
         android:layout_marginTop="100dp"
-        />
+        android:backgroundTint="#69D1FA"
+        android:onClick="submit"
+        android:text="SUBMIT" />
 
 </LinearLayout>
