--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:autofillHints="username"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity"
@@ -17,10 +16,9 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-       android:hint="Email"
+        android:hint="Email"
         />
 
     <EditText
@@ -31,7 +29,8 @@
         android:inputType="textPassword"
         android:padding="15dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+         />
 
     <Button
         android:id="@+id/buttonlogin"
@@ -40,7 +39,7 @@
         android:backgroundTint="#69D1FA"
         android:hint="Log In"
         android:onClick="login"
-
+        android:layout_marginTop="20dp"
         android:padding="15dp"
         android:text="Log In" />
 
@@ -51,6 +50,7 @@
         android:backgroundTint="#69D1FA"
         android:onClick="signup"
         android:padding="15dp"
+        android:layout_marginTop="5dp"
         android:text="Sign Up"
         android:visibility="visible"
         tools:visibility="visible" />
