--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -17,11 +17,12 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imageItem"
+        android:layout_marginRight="20dp"
         android:src="@drawable/ronaldo"
         />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewDescription"
             android:textSize="24sp"
@@ -30,6 +31,7 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="Add"
             android:id="@+id/itemButton"/>
 
