--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -10,18 +10,25 @@
     android:paddingVertical="10dp"
     tools:context=".HotelPageActivity"
     android:background="@drawable/welcomebg"
+    android:gravity="center"
 
     >
 
 
     <TextView
-        android:id="@+id/textViewWelcome"
+        android:id="@+id/textViewTakePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-
+        android:text="Take a Picture here"
+android:layout_marginLeft="50dp"
         />
 
+    <Button
+        android:id="@+id/Camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Camera" />
 
 
 
