--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,7 +9,18 @@
     android:background="@drawable/loginbg"
     android:gravity="center"
     >
+    <EditText
+        android:id="@+id/Username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:padding="15dp"
+        android:hint="Username"
+        android:textSize="18sp"
 
+
+
+        />
     <EditText
         android:id="@+id/editTextTextEmailAddress2"
         android:layout_width="match_parent"
