--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -13,21 +13,26 @@
 
 
     >
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
 
 
-    />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Explore..."
+        android:textSize="20dp"
+        android:textStyle="bold"
 
+
+        />
 
     <TextView
         android:id="@+id/textViewTakePicture"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="540dp"
         android:text="Take a Picture here"
-        android:layout_marginLeft="50dp"
-        android:gravity="bottom"
+        android:textSize="20dp"
 
         />
 
@@ -35,12 +40,10 @@
         android:id="@+id/Camera"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Camera"
-        android:layout_gravity="bottom"
 
         />
-
 
 
 
