--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -45,6 +45,15 @@
 
         />
 
+    <ImageView
+        android:id="@+id/imageViewAmanzoe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/Amanzoe"
+        
+
+        />
+
 
 </LinearLayout>
 
