--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -32,7 +32,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageViewAmanzoe"
@@ -40,27 +40,29 @@
                 android:layout_height="150dp"
                 android:layout_marginTop="25dp"
                 android:clickable="true"
-                app:srcCompat="@drawable/amanzoe" />
+                app:srcCompat="@drawable/amanzoe"
+
+                />
 
             <TextView
-                android:id="@+id/textViewTakePicture"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="130dp"
-                android:text="Take a Picture Here"
-                android:textSize="20dp"
-
-                />
-
-            <Button
-                android:id="@+id/Camera"
-                android:layout_width="match_parent"
+                below
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Camera"
+                android:layout_marginBottom="@+id/imageViewAmanzoe"
+                android:text="Amanzoe In Porto Heli, Greece" />
 
-                />
+            <RatingBar
+                android:id="@+id/RatingAmanzoe"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:rating="5">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+
+
 
         </LinearLayout>
     </ScrollView>
