--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -6,11 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="60dp"
-    android:paddingVertical="10dp"
     tools:context=".HotelPageActivity"
     android:background="@drawable/welcomebg"
-
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="10dp"
 
     >
 
@@ -18,12 +17,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Explore..."
-        android:textSize="20dp"
-        android:textStyle="bold"
-
-
-        />
+        android:text="Explore The Most Exquisite 5 Star Hotels Around The World"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,33 +35,30 @@
                 android:id="@+id/imageViewAmanzoe"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginTop="25dp"
                 android:clickable="true"
                 app:srcCompat="@drawable/amanzoe"
 
                 />
 
             <TextView
-                below
+
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@+id/imageViewAmanzoe"
-                android:text="Amanzoe In Porto Heli, Greece" />
+                android:text="Amanzoe - Porto Heli, Greece"
+                android:textSize="15sp"
+                />
 
             <RatingBar
                 android:id="@+id/RatingAmanzoe"
                 style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:rating="5">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-
+                android:rating="5" />
 
 
         </LinearLayout>
+
     </ScrollView>
 
 
