Change name of image so it is only in lower case letters

--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -92,7 +92,7 @@
                 android:scaleType="fitXY"
                 android:layout_marginTop="20dp"
                 android:onClick="DeLEurope"
-                android:src="@drawable/AmsterdamHotel"
+                android:src="@drawable/amsterdamhotel"
 
                 />
 
