--- a/app/src/main/res/layout/activity_amanzoe_desc.xml
+++ b/app/src/main/res/layout/activity_amanzoe_desc.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/AmanzoeDesc"
-    android:orientation="horizontal"
+    android:orientation="vertical"
 
     >
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="80dp"
-        android:id="@+id/bt_previous"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24"
-        android:layout_marginBottom="200dp"
         />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <ImageSwitcher
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:id="@+id/image_switcher"
-        android:layout_marginBottom="200dp"
-        />
+            />
 
+            <com.denzcoskun.imageslider.ImageSlider
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="80dp"
-        android:id="@+id/bt_next"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:layout_marginBottom="200dp"
-        />
-
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:iss_period="1000"
+                app:iss_auto_cycle="true"
+                app:iss_delay="1000"
+                app:iss_corner_radius="10"
+                app:iss_title_background="@drawable/amanzoe"
+                android:id="@+id/ImageSlider"/>
 
 
 
-</LinearLayout>
+
+
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
