--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Explore The Most Exquisite 5 Star Hotels Around The World"
+        android:text="Explore The Most Exquisite 5 Star Hotels From Around The World"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
