--- a/app/src/main/res/layout/activity_muraka_desc.xml
+++ b/app/src/main/res/layout/activity_muraka_desc.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/MurakaDesc"
     android:orientation="vertical"
-
+    android:background="@drawable/welcomebg"
     >
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
