De L'Europe description page!

--- a/app/src/main/res/layout/activity_hotel_page.xml
+++ b/app/src/main/res/layout/activity_hotel_page.xml
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="The Muraka - Maldives "
+                android:text="The Muraka - Conrad Maldives "
                 android:textSize="15sp"
 
                 />
