--- a/app/src/main/res/layout/activity_muraka_desc.xml
+++ b/app/src/main/res/layout/activity_muraka_desc.xml
@@ -30,13 +30,14 @@
         android:id="@+id/TheMurakaHotelName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_medium"
         android:text="The Muraka, Conrad Maldives"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/ImageSliderMuraka"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ImageSliderMuraka" />
 
     <TextView
         android:id="@+id/PriceRangeTheMuraka"
@@ -53,7 +54,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="The Muraka is the world's fist ever underwater hotel suite, set on the Indian Ocean"
+        android:text="The Muraka is the world's fist ever underwater hotel suite set on the Indian Ocean. The Muraka is actually a two-storey residence with an overwater section including a deck, a swimming pool, a lounge and an en suite master bedroom. As you may have already guessed, your entire stay, from beginning to end, is tailored to your preference, and your own personal butler will cater to your every whim around the clock."
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/AboutTheMuraka"
         app:layout_constraintTop_toBottomOf="@+id/AboutTheMuraka" />
@@ -76,8 +77,10 @@
         app:iss_corner_radius="10"
         app:iss_delay="1500"
         app:iss_period="1500"
-        app:iss_title_background="@drawable/muraka" />
 
-    //$1,600-$18,000 depending on room for example: underwater room is 18k//
+
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
