--- a/app/src/main/res/layout/activity_amanzoe_desc.xml
+++ b/app/src/main/res/layout/activity_amanzoe_desc.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Price Range: $1,000 - $3,000"
+        android:text="Price Range: $1,000 - $3,000 / night"
         android:textColor="@color/teal_200"
         app:layout_constraintStart_toStartOf="@+id/AmanzoeHotelName"
         app:layout_constraintTop_toBottomOf="@+id/AmanzoeHotelName" />
