--- a/app/src/main/res/layout/activity_leurope_desc.xml
+++ b/app/src/main/res/layout/activity_leurope_desc.xml
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Price Range: $800 - $900"
+        android:text="Price Range: $800 - $900 / night"
         android:textColor="@color/teal_200"
         app:layout_constraintStart_toStartOf="@+id/DeLEuropeHotelName"
         app:layout_constraintTop_toBottomOf="@+id/DeLEuropeHotelName" />
