--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@drawable/loginbg"
+    android:background="@drawable/welcomebg"
     >
 
 
@@ -36,10 +36,10 @@
         android:id="@+id/buttonlogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#69D1FA"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#3C3C3C"
         android:hint="Log In"
         android:onClick="login"
-        android:layout_marginTop="20dp"
         android:padding="15dp"
         android:text="Log In" />
 
@@ -47,9 +47,9 @@
         android:id="@+id/buttonsignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#69D1FA"
-        android:padding="15dp"
         android:layout_marginTop="5dp"
+        android:backgroundTint="#3C3C3C"
+        android:padding="15dp"
         android:text="Sign Up"
         android:visibility="visible"
         tools:visibility="visible" />
